# mau_c3_ver2

devel/: .catkin
devel/include/motor_control_pkg/: ModbusWrite.h  ModbusWriteRequest.h  ModbusWriteResponse.h
devel/lib/logic_pkg/: navigator_node
devel/lib/motor_control_pkg/: clump_node.py  panel_node.py  rotation_node.py  serial_handler_node  wheel_node.py
devel/lib/pkgconfig/: launch_pkg.pc  loanch_pkg.pc  logic_pkg.pc  motor_control_pkg.pc  sensor_pkg.pc
devel/lib/python3/dist-packages/motor_control_pkg/msg/: _ModbusWrite.py
devel/lib/python3/dist-packages/motor_control_pkg/srv/: _ModbusWrite.py  __init__.py
devel/lib/sensor_pkg/: sensor_node
devel/share/common-lisp/ros/motor_control_pkg/msg/: ModbusWrite.lisp  _package.lisp  _package_ModbusWrite.lisp  motor_control_pkg-msg.asd
devel/share/common-lisp/ros/motor_control_pkg/srv/: ModbusWrite.lisp  _package.lisp  _package_ModbusWrite.lisp  motor_control_pkg-srv.asd
devel/share/gennodejs/ros/motor_control_pkg/msg/: ModbusWrite.js  _index.js
devel/share/gennodejs/ros/motor_control_pkg/srv/: ModbusWrite.js  _index.js
devel/share/launch_pkg/cmake/: launch_pkgConfig.cmake
devel/share/loanch_pkg/cmake/: loanch_pkgConfig.cmake
devel/share/logic_pkg/cmake/: logic_pkgConfig.cmake
devel/share/motor_control_pkg/cmake/: motor_control_pkg-msg-extras.cmake  motor_control_pkg-msg-paths.cmake  motor_control_pkgConfig.cmake
devel/share/roseus/ros/motor_control_pkg/: manifest.l
devel/share/roseus/ros/motor_control_pkg/msg/: ModbusWrite.l
devel/share/roseus/ros/motor_control_pkg/srv/: ModbusWrite.l
devel/share/sensor_pkg/cmake/: sensor_pkgConfig.cmake
src/cold/: serial_handler_node.py
src/launch_pkg/: CMakeLists.txt
src/launch_pkg/launch/: master.launch
src/logic_pkg/: CMakeLists.txt  package.xml
src/logic_pkg/include/logic_pkg/: fuzzy_controller.h
src/logic_pkg/launch/: logic.launch
src/logic_pkg/src/: fuzzy_controller.cpp  image_processing.py  navigator.cpp  navigator.py
src/motor_control_pkg/: CMakeLists.txt  package.xml
src/motor_control_pkg/launch/: motor.launch
src/motor_control_pkg/msg/: ModbusWrite.msg
src/motor_control_pkg/src/: panel_node.py  rail_node.py  rotation_node.py  serial_handler_node.cpp  wheel_node.py
src/motor_control_pkg/srv/: ModbusWrite.srv
src/sensor_pkg/: CMakeLists.txt
src/sensor_pkg/launch/: sensor.launch
src/sensor_pkg/src/: camera_sensor.cpp
